# Magicpitch-Backend-Assessment

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
ReferralSystem/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  serializers.py  urls.py  views.py
users/tests/: test_users.py
